# DevOpsStudying

./: .Dockerfike.swp  .Dockerfile.swp  .Func.h.swp  .FuncA.cpp.swp  .FuncA.h.swp  .FuncA.swp  .HTTP_Server.cpp.swp  .HTTP_server.cpp.swp  .automake.swp  .base.swp  .calculatorTime.cpp.swp  .local.swp  .main.swp  .remote.swp  .scriptA.sh.swo  .scriptA.sh.swp  .timeCalcuator.h.swp  .timeCalculator.swo  .timeCalculator.swp  .unitTest.cp.swp  .unitTest.swp  Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure.ac  configure~  funca  main.cpp  scriptA.sh  scriptB.sh  test_func_a  timeCalculator.cpp  timeCalculator.h  unitTest.cpp
.deps/: FuncA.Po  HTTP_Server.Po  main.Po  timeCalculator.Po  unitTest.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.1  traces.4
debian/: changelog  control  rules
