AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = funca
check_PROGRAMS = test_func_a
test_func_a_SOURCES = unitTest.cpp FuncA.cpp FuncA.h timeCalculator.cpp timeCalculator.h HTTP_Server.cpp

TESTS = test_func_a
funca_SOURCES = main.cpp FuncA.cpp FuncA.h HTTP_Server.cpp timeCalculator.cpp timeCalculator.h 
EXTRA_DIST = Makefile.am
